--- a/donation/templates/admin_home.html
+++ b/donation/templates/admin_home.html
@@ -118,21 +118,21 @@ hr.rounded {
 </style>
 
 
-<!--<footer class="site-footer">
+<footer class="site-footer">
       <div class="container">
 
         <div class="row pt-5 mt-5 text-center">
           <div class="col-md-12">
             <p style = "font-size : 30pt ; color : white ; font-weight : bold">
 
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All Rights Reserved <span style = "color : brown">|</span> <span style = "color : yellow">This website is made with <i class="fas fa-heart icon-heart text-danger" aria-hidden="true"></i> by </span><a class= "glow" href="#" target="_blank" >Pankaj Panjwani</a>
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All Rights Reserved <span style = "color : brown">|</span> <span style = "color : yellow">This website is made with <i class="fas fa-heart icon-heart text-danger" aria-hidden="true"></i> by </span><a class= "glow" href="https://abdullakhan.com/" target="_blank" >Max-Tech</a>
 
             </p>
           </div>
 
         </div>
       </div>
-    </footer>-->
+    </footer>
 
 
 
