--- a/donation/templates/donor_home.html
+++ b/donation/templates/donor_home.html
@@ -105,7 +105,7 @@ hr.rounded {
           <div class="col-md-12">
             <p style = "font-size : 30pt ; color : #FF0000 ; font-weight : bold">
 
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All Rights Reserved <span style = "color : brown">|</span> <span style = "color : black">This website is made with <i class="fas fa-heart icon-heart text-danger" aria-hidden="true"></i> by </span><a class= "glow" href="https://abdullakhan.com/" target="_blank" >Max-Tech</a>
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All Rights Reserved <span style = "color : brown">|</span> <span style = "color : black">This website is made with <i class="fas fa-heart icon-heart text-danger" aria-hidden="true"></i> by </span><a class= "glow" href="#" target="_blank" ></a>
 
             </p>
           </div>
