--- a/donation/templates/index.html
+++ b/donation/templates/index.html
@@ -197,11 +197,11 @@
       <div class="row mt-5">
           <div class="col-lg-3 col-sm-6">
 		  <h4><i class="fas fa-phone-square"></i> Contact</h4>
-              <p class = "mt-3 text-danger font-weight-bold"><a href="tel:+91 8602768216">+91 7302238568</a></p>
+              <p class = "mt-3 text-danger font-weight-bold"><a href="tel:+91 1234567890">+91 1234567890</a></p>
           </div>
           <div class="col-lg-3 col-sm-6">
 		  <h4><i class="fas fa-envelope"></i> Send Mail</h4>
-              <p class = "mt-3 text-danger font-weight-bold"><a href="mailto:abdullah7828@abdullakhan.com">abdullah7828@abdullakhan.com</a></p>
+              <p class = "mt-3 text-danger font-weight-bold"><a href="#"></a></p>
           </div>
 		  <div class="col-lg-3 col-sm-6">
 		  <h4><i class="fas fa-address-card"></i> Office Address</h4>
@@ -223,9 +223,9 @@
         <div class="col-md-6">      <!-- Start Footer 1st Column -->
           <div>
             <span>Follow Us:</span>
-            <a href="https://api.whatsapp.com/send/?phone=7302238568&text&type=phone_number&app_absent=0" target="_blank"><i class="fab fa-whatsapp px-3"></i></a>
-            <a href="https://www.instagram.com/lion14706?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><i class="fab fa-instagram pr-3"></i></a>
-            <a href=" https://x.com/AbdullahRiyaz17?t=jED_35oJ4m6pE457NVCgDQ&s=08 " target="_blank"><i class="fab fa-twitter pr-3"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-whatsapp px-3"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-instagram pr-3"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-twitter pr-3"></i></a>
 
             <a href="#" target="_blank"><i class="fas fa-rss pr-3"></i></a>
           </div>
@@ -234,7 +234,7 @@
         <div class="col-md-6 text-right">   <!-- Start Footer 2nd Column -->
 
 
-		  <small>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All Rights Reserved | This website is made with <i class="fas fa-heart text-warning"></i> by <a href="https://abdullakhan.com/" target="_blank" >Max-Tech</a></small>
+		  <small>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All Rights Reserved | This website is made with <i class="fas fa-heart text-warning"></i> by <a href="#" target="_blank" >Navjeevan</a></small>
 
         </div>    <!-- End Footer 2nd Column -->
 
